<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:icon="@null"
    tools:context=".activities.MainActivity">
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/watch_options">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_watch_notification"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/watch_notifications_hint"
            android:title="@string/watch_notifications" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_watch_list"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/watch_list_hint"
            android:title="@string/watch_list" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/anti_block_options">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_watch_chat"
            android:layout="@layout/preference_checkbox"
            android:title="@string/auto_open_packets" />
        <com.shareder.ln_jan.wechatluckymoneygetter.activities.SeekBarPreference
            seekbarkind="open_delay"
            android:key="pref_open_delay"
            android:layout="@layout/preference_checkbox"
            android:title="@string/open_with_delay" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_watch_self"
            android:layout="@layout/preference_checkbox"
            android:title="@string/open_self" />
        <EditTextPreference
            android:key="pref_watch_exclude_words"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_watch_exclude_words_summary"
            android:title="@string/skip_phrases" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/high_level_setting">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_tips_sound"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/tips_sound_summary"
            android:title="@string/tips_sound_title"/>
        <com.shareder.ln_jan.wechatluckymoneygetter.activities.SeekBarPreference
            seekbarkind="event_interval"
            android:key="pref_event_interval"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/event_interval_hint"
            android:title="@string/event_interval" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/about">
        <Preference
            android:key="pref_etc_check_update"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/check_new_hint"
            android:title="@string/check_new_version" />
        <Preference
            android:key="pref_etc_issue"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/help_hint"
            android:title="@string/help_and_feedback" />
        <Preference
            android:key="pref_etc_shared"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/shared_app_hint"
            android:title="@string/shared_app"/>
    </PreferenceCategory>


    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/labs">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_watch_on_lock"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/snatch_on_lockscreen_hint"
            android:title="@string/snatch_on_lockscreen" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/application_info">
        <Preference
            android:key="pref_version_name"
            android:title="@string/version_name_tips"/>
    </PreferenceCategory>
</PreferenceScreen>