<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_authordetail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:textSize="19sp"
        android:text="@string/authority_request"/>

    <TextView
        android:id="@+id/tv_authordetail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_authordetail_title"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:text="@string/authority_info"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_author_icon"
        android:layout_below="@id/tv_authordetail_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/permission_ic_storage"
                android:scaleType="center"
                android:layout_centerHorizontal="true"
                android:id="@+id/imv_authordetail_storage"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imv_authordetail_storage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:text="@string/write_external_storage"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/permission_ic_phone"
                android:scaleType="center"
                android:layout_centerHorizontal="true"
                android:id="@+id/imv_authordetail_state"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imv_authordetail_state"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:text="@string/read_phone_state"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_authordetail_next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_author_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/radius_rect_bg"
        android:text="@string/okey"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
</RelativeLayout>